tests/fixtures/compile_errors/non_pub_init.fe
contract Foo:
    def __init__():
        pass